--- a/index.html
+++ b/index.html
@@ -54,15 +54,22 @@
         </div>
     </div>
 </div>
-
 <div class="newsletter">
     <h2>Stay Updated with the Latest Strategies</h2>
-    <p>Join 10,000+ subscribers getting weekly tips on earning money online</p>
-    <form class="newsletter-form" onsubmit="handleNewsletter(event)">
-        <input type="email" placeholder="Enter your email" required>
-        <button type="submit">Subscribe Free</button>
-    </form>
+    <p>Our free newsletter is launching soon. Weekly tips on earning money online.</p>
+
+    <div class="newsletter-form">
+        <input 
+            type="email" 
+            placeholder="Email subscriptions opening soon" 
+            disabled
+        >
+        <button type="button" disabled>
+            Coming Soon
+        </button>
+    </div>
 </div>
+
 
 <footer>
     <div class="footer-links">
