--- a/resources/freelance-proposal-template.html
+++ b/resources/freelance-proposal-template.html
@@ -214,9 +214,11 @@
             Get instant access to the editable freelance proposal template.
             Use it for any niche or service.
         </p>
-        <a href="#" class="tool-cta">
-        Download Free Template →
-    </a>
+    <a href="https://docs.google.com/document/d/13nZ0_5-rtdjWSNVinxoZ4KBE1Banz1ylFo5U79itsNM/edit?usp=sharing" target="_blank">
+    Download Free Template →
+</a>
+
+
     </div>
 
     <div class="tip-box">
