--- a/resources/passive-income-planner.html
+++ b/resources/passive-income-planner.html
@@ -212,9 +212,13 @@
             Get instant access to the editable spreadsheet and start tracking
             your income streams today.
         </p>
-       <a href="#" class="tool-cta">
-        Download Free Spreadsheet →
-    </a>
+      <a href="https://docs.google.com/spreadsheets/d/1ynGlTPeP1PRHTVVJtm8oAshd9cNtTtLFcPmZ_FwSgfI/edit?usp=sharing" target="_blank" class="tool-cta">
+    Download Free Spreadsheet →
+</a>
+<p style="margin-top: 1rem; font-size: 0.9rem; color: #6b7280;">
+No signup required · Make your own copy · 100% free
+</p>
+
     </div>
 
     <div class="tip-box">
